# milliways

./: .gitignore  README.md  deploy.yml  main.py  pyproject.toml  pyrightconfig.json  start.sh
.github/workflows/: deploy.yml
backend/: .env.example  alembic.ini  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 3863d52a4ff5_initial_schema.py  561d5ff58332_initial_schema.py
backend/app/: config.py  database.py  deps.py  helpers.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  recipes.py  shopping.py  tags.py
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: Button.svelte  GlassCard.svelte  Logo.svelte  Navbar.svelte  RecipeCard.svelte  RecipeDetail.svelte
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/recipes/: +page.server.ts  +page.svelte
frontend/src/routes/recipes/[id]/: +page.svelte
frontend/src/routes/recipes/[id]/edit/: +page.server.ts  +page.svelte
frontend/src/routes/recipes/add/: +page.svelte
frontend/src/routes/recipes/new/: +page.svelte
frontend/src/routes/shop/: +page.svelte
frontend/src/routes/shopping/: +page.svelte
scripts/: ingest_notion.py
server/: milliways-api.service  milliways-frontend.service  nginx.conf  setup.sh
