[project]
name = "milliways"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.47.0",
]
